force-app/main/default/objects/VS_SalesPlanDiscountRate__c/VS_SalesPlanDiscountRate__c.object-meta.xml
<CustomObject>
    <description>salesplan 생성 시 등록하는 판가 할인율 정보</description>
    <label>SalesPlanDiscountRate</label>
    <nameField>
        <displayFormat>DR-{000000000}</displayFormat>
        <label>SalesPlanDiscount Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SalesPlanDiscountRates</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>