force-app/main/default/objects/VS_SalesPlanDiscountRate__c/fields/ApplyMonth__c.field-meta.xml
<CustomField>
    <fullName>ApplyMonth__c</fullName>
    <label>Apply Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>