force-app/main/default/objects/VS_SalesPlanDiscountRate__c/fields/l_SalesPlan__c.field-meta.xml
<CustomField>
    <fullName>l_SalesPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SalesPlan</label>
    <referenceTo>VS_SalesPlan__c</referenceTo>
    <relationshipLabel>SalesPlanDiscountRates</relationshipLabel>
    <relationshipName>SalesPlanDiscountRates</relationshipName>
    <type>Lookup</type>
</CustomField>