force-app/main/default/objects/VS_SalesPlanDiscountRate__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <description>월 2자리</description>
    <label>Month</label>
    <length>2</length>
    <type>Text</type>
</CustomField>