force-app/main/default/objects/VS_SalesPlanDiscountRate__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>Year 4자리</description>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>