force-app/main/default/objects/VS_SalesPlanDiscountRate__c/fields/yyyy__c.field-meta.xml
<CustomField>
    <fullName>yyyy__c</fullName>
    <label>yyyy</label>
    <type>Date</type>
</CustomField>